force-app/main/default/objects/Quote_Approval_History__c/Quote_Approval_History__c.object-meta.xml
<CustomObject>
    <description>Tracks the approval lifecycle of a Quote.</description>
    <label>Quote Approval History</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>