force-app/main/default/objects/Quote_Approval_History__c/fields/Action_By__c.field-meta.xml
<CustomField>
    <fullName>Action_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>