force-app/main/default/objects/Quote_Approval_History__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Action Date</label>
    <type>DateTime</type>
</CustomField>