force-app/main/default/objects/Quote_Approval_History__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Approval Histories</relationshipLabel>
    <relationshipName>Approval_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>